<resources>
    <string name="app_name">LocaStory</string>
    <string name="login_button">Login</string>
    <string name="Email_text">Email</string>
    <string name="Pass_text">Password</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="No_account">Don"t have an account?</string>
    <string name="Sign_up">Sign up!</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="Firstname">First Name</string>
    <string name="Lastname">Last Name</string>
    <string name="PhoneNo">Phone number</string>
    <string name="HaveAnAcc">Already have an account</string>
    <string name="ImgDesc">Profile picture</string>
    <string name="Confirmed_pass_text">Confirm password</string>
    <string name="Welcome">Welcome to LocaStory!</string>
    <string name="Intro1">Explore your local heritage with Local Stories.</string>
    <string name="Intro2">Uncover legends, history, and traditions. Share your own tales and embark on exciting challenges.</string>
    <string name="Map">Map</string>
    <string name="Loading">Loading</string>
    <string name="ProfilePic">Profile picture</string>
    <string name="Home">Home</string>
    <string name="LocaStory">LocaStory</string>
    <string name="map_content_description">Map view showing location</string>
    <string name="AddStory">Add a story</string>
    <string name="leader">Leaderboard</string>
    <string name="like">Like</string>
    <string name="radiusbtn">Radius Button</string>
    <string name="radius">Radius</string>
</resources>